syntax = "proto3";

import "messageCode.proto";

package teacher;

option java_multiple_files = true;
option java_package = "ru.nikitavov.scheduleClasses.grpc";
option java_outer_classname = "TeacherProto";

service Teacher {
  rpc Create (CreateTeacherRequest) returns (CreateTeacherResponse) {}
  rpc Read (ReadTeacherRequest) returns (ReadTeacherResponse) {}
  rpc Delete (DeleteTeacherRequest) returns (DeleteTeacherResponse) {}

  rpc ReadAll (ReadAllTeacherRequest) returns (ReadAllTeacherResponse) {}
}

message CreateTeacherRequest {
  int64 userId = 1;
}

message CreateTeacherResponse {
  MessageCode code = 1;
  string field = 2;
}

message ReadTeacherRequest {
  int64 userId = 1;
}

message ReadTeacherResponse {
  MessageCode code = 1;
  int64 userId = 2;
  string name = 3;
}

message DeleteTeacherRequest {
  int64 userId = 1;
}

message DeleteTeacherResponse {
  MessageCode code = 1;
  string field = 2;
}

message ReadAllTeacherRequest {

}

message ReadAllTeacherResponse {
  repeated ReadTeacherResponse responses = 1;
}

